--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -342,17 +342,36 @@
   .landing-nav-outer {
     width: 100%;
   }
-  /* .cover-lines-after-animation,
-  .landing-top-lines,
-  .landing-lines-outer,
-  #root,
-  body {
-    width: 100%;
-  } */
 }
 @media screen and (max-width: 1900px) {
   .landing-top-inner {
     scale: 0.9;
+  }
+  .landing-bottom-left-top-inner {
+    width: 280px;
+    height: 100%;
+    font-size: 15px;
+    opacity: 1;
+    transition: 1s;
+  }
+  .landing-bottom {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+  .landing-bottom-left {
+    width: 58%;
+    height: 100%;
+    justify-content: flex-end;
+  }
+  .landing-bottom-middle {
+    width: 150px;
+    margin-right: 20px;
+  }
+  .landing-bottom-right {
+    width: 150px;
   }
 }
 @media screen and (max-width: 1650px) {
@@ -371,6 +390,12 @@
 @media screen and (max-width: 1100px) {
   .landing-top-inner {
     scale: 0.5;
+  }
+  .landing-bottom-middle {
+    display: none;
+  }
+  .landing-bottom-right {
+    display: none;
   }
 }
 @media screen and (max-width: 1100px) {
