--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -89,6 +89,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #3a3a1f;
+  text-decoration: none;
 }
 .products-text {
   position: absolute;
