--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -497,6 +497,29 @@ circle {
 .two-nav-contact:hover {
   background-color: #47472f;
 }
+@media screen and (max-width: 1650px) {
+  .pictures-outer {
+    width: 100%;
+    top: 0px;
+    left: 0px;
+  }
+  .pictures-inner {
+    width: 100%;
+    height: 85%;
+    overflow: hidden;
+  }
+  .back-button {
+    position: absolute;
+    left: 20px;
+    top: 15px;
+    z-index: 100;
+  }
+  .pictures-true {
+    position: fixed;
+    z-index: 100;
+    height: 65px;
+  }
+}
 @media screen and (max-width: 1300px) {
   .project-right {
     position: absolute;
@@ -559,7 +582,7 @@ circle {
   .project-left,
   .project-wheel-outer,
   .circle,
-  svg,
+  /* svg, */
   .bubble {
     display: none;
   }
