--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -88,6 +88,15 @@
   height: 70%;
   transition: 2s;
   opacity: 1;
+  background-color: aqua;
+}
+.tremonton-map {
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/images/tremonton.png');
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: none;
 }
 .map-false {
   opacity: 0;
